// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePage /> Rendering component Rendering with locale EN 1`] = `
<div
  className="sc-bwzfXH uTxCW"
>
  <div
    className="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-align-items-xs-center-9 MuiGrid-align-content-xs-center-13 MuiGrid-justify-xs-center-18"
  >
    <div
      className="MuiGrid-item-2"
    >
      <h2
        className="MuiTypography-root-98 MuiTypography-h2-111 MuiTypography-alignCenter-121"
      >
        <span>
          Hello World
        </span>
      </h2>
    </div>
    <div
      className="MuiGrid-item-2"
    >
      <div
        className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23 MuiGrid-align-items-xs-center-9 MuiGrid-align-content-xs-center-13 MuiGrid-justify-xs-center-18"
      >
        <div
          className="MuiGrid-item-2"
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
          >
            <span>
              My name is Bertrand.
            </span>
          </h6>
        </div>
        <div
          className="MuiGrid-item-2"
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
          >
            <span>
              I am a good developer.
            </span>
          </h6>
        </div>
        <div
          className="MuiGrid-item-2"
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
          >
            <span>
              Or at least, I try to be.
            </span>
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomePage /> Rendering component Rendering with locale FR 1`] = `
<div
  className="sc-bwzfXH uTxCW"
>
  <div
    className="MuiGrid-container-1 MuiGrid-direction-xs-column-4 MuiGrid-align-items-xs-center-9 MuiGrid-align-content-xs-center-13 MuiGrid-justify-xs-center-18"
  >
    <div
      className="MuiGrid-item-2"
    >
      <h2
        className="MuiTypography-root-98 MuiTypography-h2-111 MuiTypography-alignCenter-121"
      >
        <span>
          Hello World
        </span>
      </h2>
    </div>
    <div
      className="MuiGrid-item-2"
    >
      <div
        className="MuiGrid-container-1 MuiGrid-spacing-xs-8-23 MuiGrid-align-items-xs-center-9 MuiGrid-align-content-xs-center-13 MuiGrid-justify-xs-center-18"
      >
        <div
          className="MuiGrid-item-2"
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
          >
            <span>
              Je m'appelle Bertrand.
            </span>
          </h6>
        </div>
        <div
          className="MuiGrid-item-2"
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
          >
            <span>
              Je suis un bon dev.
            </span>
          </h6>
        </div>
        <div
          className="MuiGrid-item-2"
        >
          <h6
            className="MuiTypography-root-98 MuiTypography-subtitle1-116"
          >
            <span>
              Du moins, j'essaie.
            </span>
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;
